--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
+    "jszip": "^3.7.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.8"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "autoprefixer": "^10.4.2",
